# art-vs-artist

./: .gitignore  Makefile  TODO.md  art-vs-artist.py  artist_dataframe.csv  artists.txt  artists_manual_list  basic.py  fetch_images.py  fetch_wikipedia_artists.py  idea  imagefetch.py  main_image_fetch.py  pyproject.toml  requirements.txt  script_20cen_women.py  shell.nix  source_wikipedia_20th_century_women.py  utils.py  wikipedia_20century_women.py
notes/: idea
src/: google_images.py
src/old/: main_image_fetch.py  requirements.txt
