[tool.poetry]
name = "art-vs-artist"
version = "0.1.0"
description = ""
authors = ["2mol <2mol@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
beautifulsoup4 = "^4.9.2"
selenium = "^3.141.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
